--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -11,7 +11,11 @@
         <form id='form' method='post'>
           <div class='radio form-group'>
             <% for(var key in choices){ %>
-            <input type='radio' name='myFreakingFormLOL' value='<%= choices[key] %>'><strong><%= choices[key] %></strong> <br>
+              <% if(choices[key] === userchoice){ %>
+                <input type='radio' name='myFreakingFormLOL' value='<%= choices[key] %>' checked><strong><%= choices[key] %></strong> <br>
+              <% }else{ %> 
+                <input type='radio' name='myFreakingFormLOL' value='<%= choices[key] %>'><strong><%= choices[key] %></strong> <br>
+              <% } %>            
             <% } %>
           </div>
           <div class='form-group input-group'>
@@ -21,7 +25,7 @@
             </span>
           </div>
           <fieldset>
-            <button class='btn btn-primary' type='submit'>Submit</button>
+            <button class='btn btn-primary' type='submit' id='vote'>Submit</button>
           </fieldset>
         </form>
       </div>  
@@ -54,6 +58,7 @@
     </script>
     <div class='container' style='margin-top: 2%;'>
       <button class='form form-control btn btn-danger'>Delete This Poll</button>
+      <div class='alert alert-danger' id='authenalert'>You need to log in to be able to vote!</div>
     </div>
     <script>
       $(document).ready(function(){
@@ -62,6 +67,12 @@
         $('.btn-danger').click(function(){
           window.open('http://'+window.location.hostname+'/delete'+window.location.pathname.replace('/mypolls', '') , "_top");
         });
+        <% if(authenticate){ %>
+          $('#authenalert').hide();
+        <% }else{ %>
+          $('.input-group').hide();
+          $('#vote').hide();
+        <% } %>
       })
     </script>
 </body>
