--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,7 +18,7 @@
                 <h4 class='modal-title'><i class='fa fa-plus'></i>  New Poll</h4>
               </div>
               <div class="modal-body">
-                <form method = 'post' id='form'>
+                <form method = 'post' id='form' enctype='application/x-www-form-urlencoded'>
                   <fieldset class='form-group'>
                       <label for='question'>Question</label>
                       <input type='text' class='form-control' placeholder='Your Question' name='question' maxlength='100' required='true'>
