styling of poll list

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -53,8 +53,10 @@
             });
         </script>
         <style>
-            .active a{
-                margin-top: 0.5%;
+            .list-group-item:first-child {
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+                border-top: none;
             }
         </style>
         <div class='row'>
